[gd_scene load_steps=3 format=3 uid="uid://cdey26bmr578t"]

[ext_resource type="Script" path="res://Cards/card_layout.gd" id="1_48osy"]
[ext_resource type="StyleBox" uid="uid://8pc6saggcqkq" path="res://Cards/card_layout.tres" id="1_v84rw"]

[node name="CardLayout" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -125.0
offset_top = -175.0
offset_right = 125.0
offset_bottom = 175.0
pivot_offset = Vector2(125, 175)
mouse_filter = 1
script = ExtResource("1_48osy")
metadata/_edit_lock_ = true

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_v84rw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="FlavorBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="CardTitleTop" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/FlavorBox"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/FlavorBox"]
layout_mode = 2

[node name="FlavorText" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/FlavorBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
alignment = 2

[node name="FlavorBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="CardTitleBottom" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer/FlavorBox"]
unique_name_in_owner = true
layout_mode = 2
